Further changes made to landing page content

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -66,46 +66,46 @@
       <div class="container columns">
         <div class="row">
         
-        <!-- Column 1 -->
-          <div class="col-lg-3">
-            <span class="fa-stack fa-4x">
-              <i class="fa fa-circle fa-stack-2x orange"></i>
-              <i class="fa fa-star fa-stack-1x fa-inverse"></i>
-            </span>
-            <h2>Coordinate your group easily</h2>
-            <p>We've taken years of campaign experience and put it into a computer program. eConvenor gives you templates for agendas, and keeps you on track, so you can run your group even if you're not the organised type.</p>
-          </div><!-- /.col-lg-3 -->
-
-          <!-- Column 2 -->
+          <!-- Column 1 -->
           <div class="col-lg-3">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x red"></i>
               <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
             </span>
             <h2>Save time and effort</h2>
-            <p>Don't waste your time fussing with formatting or reinventing the wheel for agendas. Create minutes templates from agendas automatically, type minutes straight in and email them out with a few clicks.</p>
+            <p>eConvenor makes compiling and distributing agendas easy. A minutes template for each meeting is created from the agenda automatically. eConvenor even follows people up about completing their tasks and action items.</p>
           </div><!-- /.col-lg-3 -->
 
-          <!-- Column 3 -->
+          <!-- Column 2 -->
           <div class="col-lg-3">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x orange"></i>
-              <i class="fa fa-umbrella fa-stack-1x fa-inverse"></i>
+              <i class="fa fa-thumb-tack fa-stack-1x fa-inverse"></i>
             </span>
-            <h2>Never forget anything</h2>
-            <p>eConvenor will track tasks and send reminders to people about what they said they'd do. Your tasks will automatically flow into the next agenda, so you never lose track of your projects.</p>
+            <h2>Don't lose track of things</h2>
+            <p>eConvenor tracks your group's tasks and makes sure you don't forget them. It automatically sends reminders when deadlines approach and adds incomplete tasks to the next meeting's agenda. Nothing falls through the cracks.</p>
           </div><!-- /.col-lg-3 -->
 
-          <!-- Column 4 -->
+          <!-- Column 3 -->
           <div class="col-lg-3">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x red"></i>
               <i class="fa fa-copy fa-stack-1x fa-inverse"></i>
             </span>
             <h2>Stay organised and consistent</h2>
-            <p>Our searchable list of decisions and tasks will help you keep organisational memory when members and positions change over, and you can create templates for minutes and agendas so your formats are fuss-free.</p>
+            <p>eConvenor keeps searchable lists of your decisions and tasks. Now you can check what you did or decided last week or last year, even if you have a whole new committee. Your agendas and minutes will be easy to find.</p>
           </div><!-- /.col-lg-3 --> 
-                         
+
+          <!-- Column 4 -->
+          <div class="col-lg-3">
+            <span class="fa-stack fa-4x">
+              <i class="fa fa-circle fa-stack-2x orange"></i>
+              <i class="fa fa-star fa-stack-1x fa-inverse"></i>
+            </span>
+            <h2>Coordinate your group better</h2>
+            <p>We've taken years of experience with grassroots groups and campaigns and baked it into a computer program. eConvenor gives you the tools to help your group run smoothly even if you're not exactly the organised type.</p>
+          </div><!-- /.col-lg-3 -->
+                                   
         </div><!-- /.row --> 
       </div><!-- /.container -->
     </div><!-- /.section -->
@@ -115,7 +115,7 @@
     <div class="jumbotron divider orange-background">
       <div class="container">
       	<h1 class="text-center">Built by activists, for activists.</h1>
-      	<h2 class="text-center">eConvenor is a free service to help activist groups everywhere be better organised.</h2>
+      	<h2 class="text-center">eConvenor is a free service to help activist groups everywhere be more effective.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
 
@@ -125,31 +125,30 @@
       <div class="container columns">
     
         <h1>What does eConvenor do?</h1>
-        <p class="lead">eConvenor is a free online tool for grassroots campaigns and community groups. It does the boring bits of group organising, so you can get on with the real work.<span class="orange">&nbsp It's your virtual secretary, convenor and coordinator.</span></p>      
+        <p class="lead">eConvenor is a group organising tool for grassroots campaigns and community groups. It handles the boring and time-consuming bits of organising a group, so you can get on with the real work.<span class="orange">&nbsp It's your virtual secretary, convenor and coordinator.</span></p>      
         
         <div class="row">
           
           <div class="col-md-6">
             <ul class="fa-ul">
             <!-- Left column item 1 -->
-              <li><i class="fa-li fa fa-users fa-3x orange"></i>
+              <li><i class="fa-li fa fa-file-text fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Keeps your group in the loop</p></li>
-                  <li><p>Your account will hold contact details for your active members, so that you can send emails to the group, assign tasks, and set email reminders for them.</p></li>
+                  <li><p class="lead orange">Helps build meeting agendas</p></li>
+                  <li><p>Use a built-in agenda template or create your own. You can add time limits for each item and eConvener will tell you what time the meeting will finish. Unfinished business and outstanding tasks are automatically included, then it's emailed out.</p></li>
                 </ul>
-              </li>
               <!-- Left column item 2 -->
               <li><i class="fa-li fa fa-file-text-o fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Pulls together your meeting agendas</p></li>
-                  <li><p>You can use our agenda templates or create your own. The layout is done for you and you can estimate time for the meeting based on how long you'd like to spend on each item. Each agenda will automatically include any unfinished business or tasks from the previous meeting.</p></li>
-                </ul>
+                  <li><p class="lead orange">Creates easy-to-read minutes</p></li>
+                  <li><p>One mouse click creates a minutes template from the agenda. Just fill it in. Once you finish the minutes they can be emailed out in seconds. The front page of the minutes has two summary tables for quick reference&#151;one for tasks assigned and one for decisions made.</p></li>
+                </ul> 
               </li>
               <!-- Left column item 3 -->
-              <li><i class="fa-li fa fa-file-text fa-3x orange"></i>
+              <li><i class="fa-li fa fa-archive fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Creates and distributes minutes</p></li>
-                  <li><p>When you're ready, crete a minutes template from the agenda with one click. You can print it and fill it out, or type the minutes straight in at the meeting. We've made sure there's clear space to record decisions and tasks, so they won't get lost, and you on't forget the point of the meeting.</p></li>
+                  <li><p class="lead orange">Organises your meeting records</p></li>
+                  <li><p>eConvenor keeps your group's agendas and minutes in one location. This ensures that your group's important documents are well organised, always available and are never lost or accidentally deleted.</p></li>
                 </ul>
               </li>
             </ul><!-- /.fa-ul -->
@@ -161,21 +160,21 @@
               <li><i class="fa-li fa fa-check-square-o fa-3x orange"></i>
                 <ul>
                   <li><p class="lead orange">Tracks and follows up tasks</p></li>
-                  <li><p>A task list will be automatically created from your minutes, with the due date and the person who said they'd do it. You'll be able to see the whole list at any time, see any overdue tasks, and set automatic email reminders for those with tasks.</p></li>
+                  <li><p>Tasks are taken from meeting minutes, kept in a list and tracked so nothing is ever forgotten. When a task is nearly due, eConvenor emails a reminder to the person responsible. Tasks that are incomplete at the next meeting are automatically added to the agenda.</p></li>
                 </ul>
               </li>
               <!-- Right column item 2 -->
               <li><i class="fa-li fa fa-list fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Collates and searches decisions</p></li>
-                  <li><p>The decisions you make at your meetings ill be recorded in a master-list, so you can search through them later to find out what you decided last time, and look up the minutes from the time.</p></li>
-                </ul> 
+                  <li><p class="lead orange">Collates and lists decisions</p></li>
+                  <li><p>Decisions made by your group are copied from the minutes and collated into a sortable, searchable master list. Decisions can be searched by keyword or date. This is a useful tool to stop your group making the same decisions twice.</p></li>
+                </ul>
               </li>
               <!-- Right column item 3 -->
-              <li><i class="fa-li fa fa-archive fa-3x orange"></i>
+              <li><i class="fa-li fa fa-users fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Organises your meeting records</p></li>
-                  <li><p>*** Some text about keeping your agendas and minutes in one place and well organised rather than in a dropbox or googkle drive account.***</p></li>
+                  <li><p class="lead orange">Holds your participant's details</p></li>
+                  <li><p>eConvenor keeps a list of your group's participants, plus a summary page for every participant. Each participant's page shows their tasks. Reminders about incomplete tasks can be sent from a participant's page.</p></li>
                 </ul> 
               </li>              
             </ul><!-- /.fa-ul -->
@@ -210,7 +209,7 @@
             <!-- Left column item 1 -->
               <li><i class="fa-li fa fa-check-circle fa-3x red"></i>
                 <ul>
-                  <li><p class="lead red">A collective in the Philippines</p></li>
+                  <li><p class="lead red">A rights collective in the Philippines</p></li>
                   <li><p>which is trying to improve wheelchair access to public buildings in their local area. They have 12 activists and no budget.</p></li>
                 </ul>
               </li>
@@ -293,7 +292,7 @@
                 </ul>                                
               </li>
             </ul><!-- /.fa-ul -->
-            <p>We rely on your honesty. We hope you will apply your ethics and contribute if you should. Donations help eConvenor grow and improve.</p>
+            <p>We rely on your honesty. We hope you will apply your ethics and contribute if you should. Donations help eConvenor improve.</p>
           </div><!-- /.col-md-6 -->
           
           <div class="col-md-6">
@@ -306,7 +305,7 @@
                   </span>
                   <ul>
                     <li><p class="lead orange">Can you code? Do you want to learn how?</p></li>
-                    <li><p>When you write code which improves and extends eConvenor, you help activist groups and campaigns around the world be more effective. If you're looking for a way to make a difference on a large scale, come and work on eConvenor with us.</p></li>
+                    <li><p>When you write code to improve and extend eConvenor, you help activist groups and campaigns around the world be more effective. If you're looking for a way to make a difference on a large scale, come and work on eConvenor with us.</p></li>
                     <li><p>If you're an experienced coder, that's great. If not, we'll help you learn. We started coding not that long ago ourselves.</p></li>
                     
                   </ul>
@@ -317,8 +316,8 @@
                     <i class="fa fa-bug fa-stack-1x fa-inverse"></i>
                   </span>
                   <ul>
-                    <li><p class="lead orange">Bug reports help a lot</p></li>
-                    <li><p>Once eConvenor goes live, we will be relying on you to tell us when something doesn't work the way it should. This feedback will enable us to make eConvenor better and more reliable. When you find a bug, please take a few minutes to report it so that we can fix it.</p></li>
+                    <li><p class="lead orange">We like getting bug reports</p></li>
+                    <li><p>Once eConvenor goes live, we will be relying on you to tell us when something doesn't work properly. Your feedback will help make eConvenor better. When you find a bug, please take a few minutes to tell us so that we can fix it.</p></li>
                   </ul>
                 </li>
               </ul><!-- /.fa-ul -->
