Edited landing page content

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -40,7 +40,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#"><img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200"></a>
+          <a class="navbar-brand" href="#"><img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" alt="eConvenor logo"></a>
         </div><!-- /.navbar-header -->
         <div class="navbar-collapse collapse">
           <div class="navbar-right">
@@ -125,7 +125,7 @@
       <div class="container columns">
     
         <h1>What does eConvenor do?</h1>
-        <p class="lead">eConvenor is a group organising tool for grassroots campaigns and community groups. It handles the boring and time-consuming bits of organising a group, so you can get on with the real work.<span class="orange">&nbsp It's your virtual secretary, convenor and coordinator.</span></p>      
+        <p class="lead">eConvenor is a group-organising tool for grassroots campaigns and community groups. It handles the boring and time-consuming bits of organising a group, so you can get on with the real work.<span class="orange">&nbsp It's your virtual secretary, convenor and coordinator.</span></p>      
         
         <div class="row">
           
@@ -135,7 +135,7 @@
               <li><i class="fa-li fa fa-file-text fa-3x orange"></i>
                 <ul>
                   <li><p class="lead orange">Helps build meeting agendas</p></li>
-                  <li><p>Use a built-in agenda template or create your own. You can add time limits for each item and eConvener will tell you what time the meeting will finish. Unfinished business and outstanding tasks are automatically included, then it's emailed out.</p></li>
+                  <li><p>Use a built-in agenda template or create your own. You can add time limits for each item and eConvener will tell you what time the meeting should finish. Unfinished business and outstanding tasks are automatically included, then it's emailed out.</p></li>
                 </ul>
               <!-- Left column item 2 -->
               <li><i class="fa-li fa fa-file-text-o fa-3x orange"></i>
@@ -224,7 +224,7 @@
               <li><i class="fa-li fa fa-check-circle fa-3x red"></i>
                 <ul>
                   <li><p class="lead red">An anti-fracking campaign in Poland</p></li>
-                  <li><p> whcih has a national committee, local sub-committees and 200 campaigners. Their budget stretches to printing posters and paying one part-time staff member.</p></li>
+                  <li><p> which has a national committee, local sub-committees and 200 campaigners. Their budget stretches to printing posters and paying one part-time staff member.</p></li>
                 </ul>
               </li>
             </ul><!-- /.fa-ul -->
@@ -281,7 +281,7 @@
               </li>
               <li><i class="fa-li fa fa-th-large fa-3x orange"></i>
                 <ul>
-                  <li><p class="lead orange">Groups which can afford a donation</p></li>
+                  <li><p class="lead orange">Groups which can afford to contribute</p></li>
                   <li><p>Groups who feel that they can afford to make a donation in return for using eConvenor should do so once each year.</p></li>
                 </ul>                
               </li>
