--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -1,11 +1,105 @@
-{% extends "base_index.html" %}
+<!DOCTYPE html>
 
-{% block content %}
+{% load staticfiles %}
+
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="{% static 'images/econvenor-favicon-v1.ico' %}">
+
+	<title>eConvener</title>
+
+	<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
+	<link href="{% static 'css/landing.css' %}" rel="stylesheet">
+
+    <style type="text/css">
+  
+      body {
+        padding-top: 60px;
+        padding-bottom: 40px;
+        background-color: #eee;
+      }
+
+      .form-signin {
+        max-width: 330px;
+        padding: 80px 15px 15px 15px;
+        margin: 0 auto;
+      }
+
+      .form-signin .form-signin-heading,
+      .form-signin .checkbox {
+        margin-bottom: 10px;
+      }
+      
+      .form-signin .checkbox {
+        font-weight: normal;
+      }
+      
+      .form-signin .form-control {
+        position: relative;
+        height: auto;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+         box-sizing: border-box;
+         padding: 10px;
+         font-size: 16px;
+       }
+
+       .form-signin .form-control:focus {
+         z-index: 2;
+       }
+
+       .form-signin input[type="text"] {
+         margin-bottom: -1px;
+         border-bottom-right-radius: 0;
+         border-bottom-left-radius: 0;
+       }
+
+       .form-signin input[type="password"] {
+         margin-bottom: 10px;
+         border-top-left-radius: 0;
+         border-top-right-radius: 0;
+       }
+
+     </style>
+    
+  </head>
+
+  <body>
+
+    <div class="container">
+    
+      <h1 class="text-center">eConvenor will go live in early April</h2>
+      
+      <h3 class="text-center">This is a login page for people who are testing the application prior to its release.</h3>
+      
+      <h3 class="text-center red">Accounts will be available for the public in early April.</h3>
+      
+      <p class="text-center">Return to the eConvenor <a href="https://www.econvenor.org/">main page</a>.</p>
+      
+      <form class="form-signin" role="form" method="POST">
+        <h3 class="form-signin-heading text-center">Testers sign in here</h2>
+        						{% csrf_token %}
+        <input type="text" class="form-control" id="id_username" name="username" placeholder="Username" required autofocus>
+        <input type="password" class="form-control" id="id_password" name="password" placeholder="Password" required>
+        <button class="btn btn-lg btn-primary btn-block" type="submit" name="login_button">Sign in</button>
+      </form>
+  	  <p class="text-center red">{{ error }}</p>
+    </div> <!-- /container -->
 
 
-<div class="page-header">
-	<h1>eConvener</h1>
-</div>  
+    <script src="{% static 'js/jquery-1.11.0.min.js' %}"></script> 
+	<script src="{% static 'js/bootstrap.min.js' %}"></script>
+						
+	<script type="text/javascript">
+	  var bootstrapButton = $.fn.button.noConflict()
+	  $.fn.bootstrapBtn = bootstrapButton 
+	</script>
 
+  </body>
+</html>
 
-{% endblock %}
