--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -63,48 +63,51 @@
     <!-- SECTION 1
     ================================================== -->
     <div class="section" id="section1">
-      <div class="container columns">
+      <div class="container narrow-columns">
         <div class="row">
         
           <!-- Column 1 -->
-          <div class="col-lg-3">
+          <div class="col-xs-6 col-md-3">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x red"></i>
               <i class="fa fa-clock-o fa-stack-1x fa-inverse"></i>
             </span>
             <h2>Save time and effort</h2>
             <p>eConvenor makes compiling and distributing agendas easy. A minutes template for each meeting is created from the agenda automatically. eConvenor even follows people up about completing their tasks and action items.</p>
-          </div><!-- /.col-lg-3 -->
+          </div><!-- /.col-xs-6 -->
 
           <!-- Column 2 -->
-          <div class="col-lg-3">
+          <div class="col-xs-6 col-md-3">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x orange"></i>
               <i class="fa fa-thumb-tack fa-stack-1x fa-inverse"></i>
             </span>
             <h2>Don't lose track of things</h2>
             <p>eConvenor tracks your group's tasks and makes sure you don't forget them. It automatically sends reminders when deadlines approach and adds incomplete tasks to the next meeting's agenda. Nothing falls through the cracks.</p>
-          </div><!-- /.col-lg-3 -->
-
+          </div><!-- /.col-xs-6 -->
+          
+          <!-- Clear floats so that columns wrap properly is xs viewports -->
+          <div class="clearfix visible-xs"></div>
+          
           <!-- Column 3 -->
-          <div class="col-lg-3">
+          <div class="col-xs-6 col-md-3">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x red"></i>
               <i class="fa fa-copy fa-stack-1x fa-inverse"></i>
             </span>
             <h2>Stay organised and consistent</h2>
             <p>eConvenor keeps searchable lists of your decisions and tasks. Now you can check what you did or decided last week or last year, even if you have a whole new committee. Your agendas and minutes will be easy to find.</p>
-          </div><!-- /.col-lg-3 --> 
+          </div><!-- /.col-xs-6 --> 
 
           <!-- Column 4 -->
-          <div class="col-lg-3">
+          <div class="col-xs-6 col-md-3">
             <span class="fa-stack fa-4x">
               <i class="fa fa-circle fa-stack-2x orange"></i>
               <i class="fa fa-star fa-stack-1x fa-inverse"></i>
             </span>
             <h2>Coordinate your group better</h2>
             <p>We've taken years of experience with grassroots groups and campaigns and baked it into a computer program. eConvenor gives you the tools to help your group run smoothly even if you're not exactly the organised type.</p>
-          </div><!-- /.col-lg-3 -->
+          </div><!-- /.col-xs-6 -->
                                    
         </div><!-- /.row --> 
       </div><!-- /.container -->
@@ -122,14 +125,18 @@
     <!-- SECTION 2
     ================================================== -->
     <div class="section" id="section2">
-      <div class="container columns">
+      <div class="container wide-columns">
     
-        <h1>What does eConvenor do?</h1>
-        <p class="lead">eConvenor is a group-organising tool for grassroots campaigns and community groups. It handles the boring and time-consuming bits of organising a group, so you can get on with the real work.<span class="orange">&nbsp It's your virtual secretary, convenor and coordinator.</span></p>      
-        
+        <div class="row">
+          <div class="col-xs-12">
+            <h1>What does eConvenor do?</h1>
+            <p class="lead">eConvenor is a group-organising tool for grassroots campaigns and community groups. It handles the boring and time-consuming bits of organising a group, so you can get on with the real work.<span class="orange">&nbsp It's your virtual secretary, convenor and coordinator.</span></p>      
+          </div><!-- /.col-xs-12 -->
+        </div><!-- /.row -->    
+              
         <div class="row">
           
-          <div class="col-md-6">
+          <div class="col-xs-12 col-sm-6">
             <ul class="fa-ul">
             <!-- Left column item 1 -->
               <li><i class="fa-li fa fa-file-text fa-3x orange"></i>
@@ -152,9 +159,9 @@
                 </ul>
               </li>
             </ul><!-- /.fa-ul -->
-          </div><!-- /.col-md-6 -->
+          </div><!-- /.col-xs-12 -->
               
-          <div class="col-md-6">
+          <div class="col-xs-12 col-sm-6">
             <ul class="fa-ul">
             <!-- Right column item 1 -->
               <li><i class="fa-li fa fa-check-square-o fa-3x orange"></i>
@@ -178,7 +185,7 @@
                 </ul> 
               </li>              
             </ul><!-- /.fa-ul -->
-          </div><!-- /.col-md-6 -->
+          </div><!-- /.col-xs-12 -->
           
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -196,14 +203,18 @@
     <!-- SECTION 3
     ================================================== -->
     <div class="section" id="section3">
-      <div class="container columns">
-    
-        <h1>Who is eConvenor for?</h1>
-        <p class="lead">eConvenor is for grassroots campaigns, non-government organisations (NGOs), progressive service providers and activist groups.<span class="red">&nbsp Your group must have a socially-just, progressive focus.</span></p>      
+      <div class="container wide-columns">
+
+        <div class="row">
+          <div class="col-xs-12">    
+            <h1>Who is eConvenor for?</h1>
+            <p class="lead">eConvenor is for grassroots campaigns, non-government organisations (NGOs), progressive service providers and activist groups.<span class="red">&nbsp Your group must have a socially-just, progressive focus.</span></p>      
+          </div><!-- /.col-xs-12 -->
+        </div><!-- /.row -->            
         
         <div class="row">
           
-          <div class="col-md-6">
+          <div class="col-xs-12 col-sm-6">
             <h2>eConvenor is for groups like these</h2>
             <ul class="fa-ul">
             <!-- Left column item 1 -->
@@ -228,9 +239,9 @@
                 </ul>
               </li>
             </ul><!-- /.fa-ul -->
-          </div><!-- /.col-md-6 -->
+          </div><!-- /.col-xs-12 -->
               
-          <div class="col-md-6">
+          <div class="col-xs-12 col-sm-6">
             <h2>It's not for everyone though</h2>
             <p class="lead">We built eConvenor to make the world a better place.</p> 
             <p class="lead">You must not use eConvenor if your group:</p>
@@ -246,7 +257,7 @@
               <li><i class="fa-li fa fa-times-circle fa-3x red"></i>
                 <p class="lead fa-align red">aims to spread religion.</p></li>
             </ul><!-- /.fa-ul -->
-          </div><!-- /.col-md-6 -->
+          </div><!-- /.col-xs-12 -->
           
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -264,13 +275,18 @@
     <!-- SECTION 4
     ================================================== -->
     <div class="section" id="section4">
-      <div class="container columns">
+      <div class="container wide-columns">
     
-        <h1>eConvenor is free!</h1>
-        <p class="lead"><span class="orange">This is an open source project and we aim to make the eConvenor service available as widely as we can.</span> &nbsp This means eConvenor is free for almost everyone, and we ask better funded groups to contribute financially.</p>      
-
         <div class="row">
-          <div class="col-md-6">
+          <div class="col-xs-12">
+            <h1>eConvenor is free!</h1>
+            <p class="lead"><span class="orange">This is an open source project and we aim to make the eConvenor service available as widely as we can.</span> &nbsp This means eConvenor is free for almost everyone, and we ask better funded groups to contribute financially.</p>      
+          </div><!-- /.col-xs-12 -->
+        </div><!-- /.row -->    
+        
+        <div class="row">
+          
+          <div class="col-xs-12 col-sm-6">
             <h2>From each according to their means</h2>
             <ul class="fa-ul">
               <li><i class="fa-li fa fa-th fa-3x orange"></i>
@@ -293,9 +309,9 @@
               </li>
             </ul><!-- /.fa-ul -->
             <p>We rely on your honesty. We hope you will apply your ethics and contribute if you should. Donations help eConvenor improve.</p>
-          </div><!-- /.col-md-6 -->
+          </div><!-- /.col-xs-12 -->
           
-          <div class="col-md-6">
+          <div class="col-xs-12 col-sm-6">
             <h2>Help build eConvenor</h2>
               <ul class="fa-ul">
                 <li>
@@ -321,7 +337,7 @@
                   </ul>
                 </li>
               </ul><!-- /.fa-ul -->
-          </div><!-- /.col-md-6 -->
+          </div><!-- /.col-xs-12 -->
           
         </div><!-- /.row -->
       </div><!-- /.container -->
@@ -329,10 +345,10 @@
 
     <!-- DIVIDER 4
     ================================================== -->
-    <div class="jumbotron divider black-background">
+    <div class="jumbotron divider black-background" id="divider4">
       <div class="container">
       	<h1 class="text-center">eConvenor launches on April 2nd.</h1>
-      	<h2 class="text-center white">Please come back then and start using the service.</h2>
+      	<h2 class="text-center">Please come back then and start using the service.</h2>
       </div><!-- /.container -->
     </div> <!-- /.jumbotron -->
   
