--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -31,25 +31,18 @@
   
     <!-- NAVBAR 
     ================================================== -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+
+    <div class="navbar navbar-fixed-top">
       <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="#"><img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" alt="eConvenor logo"></a>
-        </div><!-- /.navbar-header -->
-        <div class="navbar-collapse collapse">
-          <div class="navbar-right">
-            <p class="navbar-text">Are you an eConvenor tester?</p>
-            <a href={% url 'login' %}><button type="submit" class="btn btn-default navbar-btn">Sign in</button></a>
-          </div>
-        </div><!-- /.navbar-collapse -->
-      </div><!-- /.container -->
-    </div><!-- /.navbar -->
+        <span class="navbar-brand">
+          <img src="{% static 'images/econvenor-logo-v1l.png' %}" width="200" alt="eConvenor logo">
+        </span>
+        <div class="pull-right">
+          <a href={% url 'login' %}><button type="submit" class="btn btn-default">Sign in</button></a>
+        </div>
+      </div>
+    </div>
+
 
     <!-- HERO
     ================================================== -->
@@ -240,7 +233,7 @@
               </li>
             </ul><!-- /.fa-ul -->
           </div><!-- /.col-xs-12 -->
-              
+ 
           <div class="col-xs-12 col-sm-6">
             <h2>It's not for everyone though</h2>
             <p class="lead">We built eConvenor to make the world a better place.</p> 
