--- a/static/css/landing.css
+++ b/static/css/landing.css
@@ -8,7 +8,7 @@ body {
   color: #555555;
   font-family: 'Body', Helvetica, Arial, sans-serif;
   font-size: 18px;
-  padding-top: 84px;
+  padding-top: 75px;
 }
 
 .orange {
@@ -88,30 +88,23 @@ body {
 -------------------------------------------------- */
 
 .navbar {
+  height: 75px;
   margin-bottom: 0px;
-  padding-bottom: 9px;
+  padding-bottom: 0px;
   border-bottom: 0px solid transparent;
   background-color: #ffffff;
 }
 
-.navbar-brand {
-  padding: 20px 25px;
+.navbar .container {
+  min-width: 620px;
 }
 
-.navbar-form {
-  padding: 10px 30px;
-  margin-top: 0px;
-  margin-bottom: 0px;
-  -webkit-box-shadow: inset 0 0px 0 rgba(255, 255, 255, .1), 0 0px 0 rgba(255, 255, 255, .1);
-          box-shadow: inset 0 0px 0 rgba(255, 255, 255, .1), 0 0px 0 rgba(255, 255, 255, .1);
+.navbar .btn {
+  margin-top: 14px;
 }
 
 .navbar-text {
   margin-top: 30px;
-}
-
-.navbar-btn {
-  margin-top: 19px;
 }
 
 
@@ -127,9 +120,9 @@ body {
 }
 
 .btn-default {
-  color: #ff0066;
+  color: #aaaaaa;
   background-color: #ffffff;
-  border-color: #ff0066;
+  border-color: #aaaaaa;
 }
 
 .btn-default:hover,
@@ -137,9 +130,9 @@ body {
 .btn-default:active,
 .btn-default.active,
 .open .dropdown-toggle.btn-default {
-  color: #ffffff;
-  background-color: #ff0066;
-  border-color: #ff0066;
+  color: #555555;
+  background-color: #ffffff;
+  border-color: #555555;
 }
 
 
