Minor formatting changes to landing and login pages

--- a/landing/templates/index.html
+++ b/landing/templates/index.html
@@ -123,7 +123,7 @@
         <div class="row">
           <div class="col-xs-12">
             <h1>What does eConvenor do?</h1>
-            <p class="lead">eConvenor is a group-organising tool for grassroots campaigns and community groups. It handles the boring and time-consuming bits of organising a group, so you can get on with the real work.<span class="orange">&nbsp It's your virtual secretary, convenor and coordinator.</span></p>      
+            <p class="lead">eConvenor is a group-organising tool for grassroots campaigns and community groups. It handles the boring and time-consuming bits of organising a group, so you can get on with the real work.<span class="orange">&nbsp; It's your virtual secretary, convenor and coordinator.</span></p>      
           </div><!-- /.col-xs-12 -->
         </div><!-- /.row -->    
               
@@ -201,7 +201,7 @@
         <div class="row">
           <div class="col-xs-12">    
             <h1>Who is eConvenor for?</h1>
-            <p class="lead">eConvenor is for grassroots campaigns, non-government organisations (NGOs), progressive service providers and activist groups.<span class="red">&nbsp Your group must have a socially-just, progressive focus.</span></p>      
+            <p class="lead">eConvenor is for grassroots campaigns, non-government organisations (NGOs), progressive service providers and activist groups.<span class="red">&nbsp; Your group must have a socially-just, progressive focus.</span></p>      
           </div><!-- /.col-xs-12 -->
         </div><!-- /.row -->            
         
@@ -272,7 +272,7 @@
         <div class="row">
           <div class="col-xs-12">
             <h1>eConvenor is free!</h1>
-            <p class="lead"><span class="orange">This is an open source project and we aim to make the eConvenor service available as widely as we can.</span> &nbsp This means eConvenor is free for almost everyone, and we ask better funded groups to contribute financially.</p>      
+            <p class="lead"><span class="orange">This is an open source project and we aim to make the eConvenor service available as widely as we can.</span>&nbsp; This means eConvenor is free for almost everyone, and we ask better funded groups to contribute financially.</p>      
           </div><!-- /.col-xs-12 -->
         </div><!-- /.row -->    
         
