--- a/core/templates/login.html
+++ b/core/templates/login.html
@@ -44,28 +44,28 @@
         height: auto;
         -webkit-box-sizing: border-box;
         -moz-box-sizing: border-box;
-         box-sizing: border-box;
-         padding: 10px;
-         font-size: 16px;
-       }
+        box-sizing: border-box;
+        padding: 10px;
+        font-size: 16px;
+      }
 
-       .form-signin .form-control:focus {
-         z-index: 2;
-       }
+      .form-signin .form-control:focus {
+        z-index: 2;
+      }
 
-       .form-signin input[type="text"] {
-         margin-bottom: -1px;
-         border-bottom-right-radius: 0;
-         border-bottom-left-radius: 0;
-       }
+      .form-signin input[type="text"] {
+        margin-bottom: -1px;
+        border-bottom-right-radius: 0;
+        border-bottom-left-radius: 0;
+      }
 
-       .form-signin input[type="password"] {
-         margin-bottom: 10px;
-         border-top-left-radius: 0;
-         border-top-right-radius: 0;
-       }
+      .form-signin input[type="password"] {
+        margin-bottom: 10px;
+        border-top-left-radius: 0;
+        border-top-right-radius: 0;
+      }
 
-     </style>
+    </style>
     
   </head>
 
@@ -73,17 +73,19 @@
 
     <div class="container">
     
-      <h1 class="text-center">eConvenor will go live in early April</h2>
+      <h1 class="text-center">eConvenor will go live in early April.</h1>
+  
+      <h2 class="text-center red">Accounts will be available then.</h2>
       
-      <h3 class="text-center">This is a login page for people who are testing the application prior to its release.</h3>
+      <h4 class="text-center">Return to the eConvenor <a href="https://www.econvenor.org/">main page</a>.</h4>
       
-      <h3 class="text-center red">Accounts will be available for the public in early April.</h3>
-      
-      <p class="text-center">Return to the eConvenor <a href="https://www.econvenor.org/">main page</a>.</p>
-      
+      <br>
+      <br>
+ 
+      <h3 class="text-center">This is a login page for people who are testing eConvenor prior to its release.</h3>
+  
       <form class="form-signin" role="form" method="POST">
-        <h3 class="form-signin-heading text-center">Testers sign in here</h2>
-        						{% csrf_token %}
+        {% csrf_token %}
         <input type="text" class="form-control" id="id_username" name="username" placeholder="Username" required autofocus>
         <input type="password" class="form-control" id="id_password" name="password" placeholder="Password" required>
         <button class="btn btn-lg btn-primary btn-block" type="submit" name="login_button">Sign in</button>
