Connected all the smaller apps togther

--- a/templates/app_base.html
+++ b/templates/app_base.html
@@ -16,7 +16,7 @@
 
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
 		<link href="{% static 'css/font-awesome.min.css' %}" rel="stylesheet">
-		<link href="{% static 'css/econvener.css' %}" rel="stylesheet">
+		<link href="{% static 'css/econvenor.css' %}" rel="stylesheet">
 		<link href="{% static 'css/jqueryui-1.10.3.smoothness.css' %}" rel="stylesheet">
 	</head>
 
