--- a/static/css/econvenor.css
+++ b/static/css/econvenor.css
@@ -25,7 +25,7 @@ body {
   font-family: 'Body font', Helvetica, Arial, sans-serif;
   padding-top: 3em;
 /*  background-color: #eeeeee; */
-  background-image: url('/static/images/ticks.png');
+  background-image: url('/static/images/texture.png');
 }
 
 
